Fixed alignment issue for platform logo in platform reports page

--- a/app/assets/stylesheets/reports.less
+++ b/app/assets/stylesheets/reports.less
@@ -1979,7 +1979,6 @@ div.strategy_total_container {
   .each_col {
     padding-top: 0px ;
     padding-bottom: 0px ;
-    margin-top: 5px;
     margin-bottom: 10px;
   }
   .platform_name_col {
@@ -2368,8 +2367,8 @@ div.strategy_total_container {
   // I think the  markup should be refactored as tabular data
   #reports_platform_cost_block,#reports_platform_viewability_block,#reports_platform_performance_block{
     .each_col {
-      line-height: 17px ;
-      margin-top: 10px ;
+      line-height: 17px ;/*
+      margin-top: 10px ;*/
     }
     .plat_name{
       margin-left:10px;
@@ -2973,6 +2972,7 @@ div.strategy_total_container {
     }
     .each_cost_col {
       .ColHeadingFontColor();
+      line-height: 17px ;
       &.active{
         color:#0978c9;
       }
@@ -3108,7 +3108,16 @@ div.strategy_total_container {
     cursor: default;
   }
 
-
+  .platform_row {
+    margin: 10px 0;
+    .platform_logo {
+      padding-left: 12px ;
+      .plat_name {
+        max-width: 60%;
+        line-height: 17px ;
+      }
+    }
+  }
   .reports_platform_header{
     .each_cost_col {
       &.fifth_col{
